Add support for local language configuration (#1249)
* add local configuration

* move config loading to Application::new

* simplify find_root_impl

--- a/helix-loader/Cargo.toml
+++ b/helix-loader/Cargo.toml
@@ -18,6 +18,8 @@ tree-sitter = "0.20"
 libloading = "0.7"
 once_cell = "1.9"
 
+log = "0.4"
+
 # cloning/compiling tree-sitter grammars
 cc = { version = "1" }
 threadpool = { version = "1.0" }
