Add tokyonight_storm theme, adjust tokyonight theme

--- a/runtime/themes/tokyonight_storm.toml
+++ b/runtime/themes/tokyonight_storm.toml
@@ -76,6 +76,6 @@ black = "#414868"
 foreground = "#a9b1d6"
 foreground_highlight = "#c0caf5"
 foreground_gutter = "#3b4261"
-background = "#1a1b26"
-background_highlight = "#282b3c"
-background_menu = "#16161e"
+background = "#24283b"
+background_highlight = "#373d5a"
+background_menu = "#1f2335"
