Use single ui.virtual declaration for ruler and whitespace

--- a/runtime/themes/tokyonight_storm.toml
+++ b/runtime/themes/tokyonight_storm.toml
@@ -38,8 +38,7 @@
 "ui.statusline.inactive" = { fg = "foreground_gutter", bg = "background_menu" }
 "ui.text" = { fg = "foreground" }
 "ui.text.focus" = { fg = "cyan" }
-"ui.virtual.ruler" = { fg = "foreground_gutter" }
-"ui.virtual.whitespace" = { fg = "foreground_gutter" }
+"ui.virtual" = { fg = "foreground_gutter" }
 "ui.window" = { fg = "black" }
 
 "error" = { fg = "red" }
