--- a/runtime/themes/tokyonight.toml
+++ b/runtime/themes/tokyonight.toml
@@ -38,8 +38,7 @@
 "ui.statusline.inactive" = { fg = "foreground_gutter", bg = "background_menu" }
 "ui.text" = { fg = "foreground" }
 "ui.text.focus" = { fg = "cyan" }
-"ui.virtual.ruler" = { fg = "foreground_gutter" }
-"ui.virtual.whitespace" = { fg = "foreground_gutter" }
+"ui.virtual" = { fg = "foreground_gutter" }
 "ui.window" = { fg = "black" }
 
 "error" = { fg = "red" }
@@ -79,5 +78,5 @@ foreground = "#a9b1d6"
 foreground_highlight = "#c0caf5"
 foreground_gutter = "#363b54"
 background = "#1a1b26"
-background_highlight = "#282b3c"
+background_highlight = "#30374b"
 background_menu = "#16161e"
