--- a/runtime/themes/pop-dark.toml
+++ b/runtime/themes/pop-dark.toml
@@ -10,7 +10,7 @@ warning = { fg = 'brownD', bg = 'orangeW', modifiers = ['bold'] }
 error = { fg = 'brownD', bg = 'redE', modifiers = ['bold'] }
 diagnostic = { fg = 'greyT', bg = 'redD' }
 'ui.background' = { bg = 'brownN' }
-# 'ui.window' = { bg = '#FF00FF', fg = 'black' } # ?
+'ui.window' = { bg = 'brownH', fg = "brownD" } 
 'ui.gutter' = { bg = 'brownH' }
 'ui.text' = { fg = 'greyT' }
 'ui.text.focus' = { fg = 'orangeN' }
