--- a/languages.toml
+++ b/languages.toml
@@ -1289,3 +1289,17 @@ indent = { tab-width = 4, unit = "    " }
 [[grammar]]
 name = "cairo"
 source = { git = "https://github.com/archseer/tree-sitter-cairo", rev = "5155c6eb40db6d437f4fa41b8bcd8890a1c91716" }
+
+[[language]]
+name = "cpon"
+scope = "scope.cpon"
+injection-regex = "^cpon$"
+file-types = ["cpon", "cp"]
+roots = []
+auto-format = true
+comment-token = "//"
+indent = { tab-width = 2, unit = "  " }
+
+[[grammar]]
+name = "cpon"
+source = { git = "https://github.com/fvacek/tree-sitter-cpon", rev = "11ba46a4de3eb86934003133099c9963a60f9687" }
