Continue block comment when opening a newline

--- a/languages.toml
+++ b/languages.toml
@@ -7,6 +7,7 @@ roots = ["Cargo.toml", "Cargo.lock"]
 auto-format = true
 comment-token = "//"
 comment-tokens = ["//", "///"]
+block-comment-tokens = { start = "/*", middle = "*", end = "*/" }
 language-server = { command = "rust-analyzer" }
 indent = { tab-width = 4, unit = "    " }
 
