feat(languages): git-ignore and git-attributes

--- a/languages.toml
+++ b/languages.toml
@@ -957,6 +957,32 @@ name = "git-config"
 source = { git = "https://github.com/the-mikedavis/tree-sitter-git-config", rev = "0e4f0baf90b57e5aeb62dcdbf03062c6315d43ea" }
 
 [[language]]
+name = "git-attributes"
+scope = "source.gitattributes"
+roots = []
+file-types = [".gitattributes"]
+injection-regex = "git-attributes"
+comment-token = "#"
+grammar = "gitattributes"
+
+[[grammar]]
+name = "gitattributes"
+source = { git = "https://github.com/mtoohey31/tree-sitter-gitattributes", rev = "ba4b39afcabf8a605f7a382f30be9450ac09ff08" }
+
+[[language]]
+name = "git-ignore"
+scope = "source.gitignore"
+roots = []
+file-types = [".gitignore"]
+injection-regex = "git-ignore"
+comment-token = "#"
+grammar = "gitignore"
+
+[[grammar]]
+name = "gitignore"
+source = { git = "https://github.com/shunsambongi/tree-sitter-gitignore", rev = "2e4cd389d2e187864569cf8fa8098a7e3d03bad6" }
+
+[[language]]
 name = "graphql"
 scope = "source.graphql"
 injection-regex = "graphql"
