Monokai pro spectrum theme shows error in yellow on red background
current theme shows keyword and error in the same way - red on black

--- a/runtime/themes/monokai_pro_spectrum.toml
+++ b/runtime/themes/monokai_pro_spectrum.toml
@@ -62,7 +62,7 @@
 "variable.parameter" = "#f59762"
 
 # error
-"error" = "red"
+"error" = { bg = "red", fg = "yellow" }
 
 # annotations, decorators
 "special" = "#f59762"
