--- a/theme.toml
+++ b/theme.toml
@@ -67,10 +67,10 @@ label = "honey"
 "ui.menu.selected" = { fg = "revolver", bg = "white" }
 
 diagnostic = { modifiers = ["underlined"] }
-"diagnostic.hint" = { fg = "revolver", bg = "lilac" }
-"diagnostic.info" = { fg = "revolver", bg = "lavender" }
-"diagnostic.warning" = { fg = "revolver", bg = "honey" }
-"diagnostic.error" = { fg = "revolver", bg = "apricot" }
+# "diagnostic.hint" = { fg = "revolver", bg = "lilac" }
+# "diagnostic.info" = { fg = "revolver", bg = "lavender" }
+# "diagnostic.warning" = { fg = "revolver", bg = "honey" }
+# "diagnostic.error" = { fg = "revolver", bg = "apricot" }
 
 warning = "lightning"
 error = "apricot"
