--- a/helix-loader/Cargo.toml
+++ b/helix-loader/Cargo.toml
@@ -11,9 +11,9 @@ homepage = "https://helix-editor.com"
 
 [dependencies]
 anyhow = "1"
+etcetera = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
-directories = "4"
 tree-sitter = "0.20"
 libloading = "0.7"
 once_cell = "1.9"
