Default to tabs instead of spaces for Odin files

--- a/languages.toml
+++ b/languages.toml
@@ -1337,7 +1337,7 @@ scope = "source.odin"
 file-types = ["odin"]
 roots = []
 comment-token = "//"
-indent = { tab-width = 4, unit = "  " }
+indent = { tab-width = 4, unit = "\t" }
 
 [[grammar]]
 name = "odin"
