Added a default lsp server for Java in languages.toml

--- a/languages.toml
+++ b/languages.toml
@@ -551,6 +551,7 @@ scope = "source.java"
 injection-regex = "java"
 file-types = ["java"]
 roots = ["pom.xml"]
+language-server = { command = "jdtls" }
 indent = { tab-width = 4, unit = "    " }
 
 [[grammar]]
