Changing Macro color to avoid color confusion
I noticed that in Rust, `println!`being a macro, it matched the color of string literals. This was visually confusing to me, so I checked what the nvim catpuccin theme (https://github.com/catppuccin/nvim) does. While it is pretty different, it does use different colors for strings and all function types: https://share.cleanshot.com/RLG2y1

I don't know if blue or red makes more sense given the other syntax choices, but wanted to propose this change cc @IsotoxalDev

--- a/runtime/themes/catpuccin.toml
+++ b/runtime/themes/catpuccin.toml
@@ -14,7 +14,7 @@ type = "blue"
 "type.builtin" = "white"
 constructor = "blue"
 function = "red"
-"function.macro" = "green"
+"function.macro" = "blue"
 "function.builtin" = "blue"
 tag = "peach"
 comment = "gray_1"
