Add cursorline scope for onedark theme

--- a/runtime/themes/onedark.toml
+++ b/runtime/themes/onedark.toml
@@ -58,6 +58,7 @@ diagnostic = { modifiers = ["underlined"] }
 
 "ui.selection" = { bg = "light-gray" }
 "ui.selection.primary" = { bg = "gray" }
+"ui.cursorline.primary" = { bg = "light-black" }
 
 "ui.linenr" = { fg = "linenr" }
 "ui.linenr.selected" = { fg = "white" }
