Replace wasmer runtime with wasmtime
* Replaced usage of wasmer runtime with wasmtime runtime
* Removed code related to reading/writing from plugin guest stdio since
  communication between host/guest will be done via direct function
  calls

--- a/helix-plugins/Cargo.toml
+++ b/helix-plugins/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 helix-loader = { version = "0.6", path = "../helix-loader" }
-wasmer = "2.3.0"
-wasmer-wasi = "2.3.0"
+wasmtime = "0.38.1"
+wasmtime-wasi = "0.38.1"
 log = "0.4"
 protobuf = "3.0.3"
 crossterm = "0.23"
